--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tech2etc Ecommerce</title>
+    <script
+      src="https://kit.fontawesome.com/adfc19058c.js"
+      crossorigin="anonymous"
+    ></script>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+  <body>
 
-        <link rel="stylesheet" href="style.css">
-    </head>
+    <section id="header" class="about=heder"> 
+      <a href="#"><img src="img/logo.png" alt="" class="logo" /></a>
+      <div>
+        <ul id="navbar">
+          <li><a  href="index.html">Home</a></li>
+          <li><a  href="shop.html">Shop</a></li>
+          <li><a   href="blog.html">Blog</a></li>
+          <li><a   href="about.html">About</a></li>
+          <li><a class="active" href="contact.html">Contact</a></li>
+          <li>
+            <a id="lg-bag" href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+          </li>
+          <a href="#" id="close"><i class="fa-solid fa-circle-xmark"></i></a>
+        </ul>
+      </div>
+      <div id="mobile">
+        <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+        <i id="bar" class="fas fa-outdent"></i>
+      </div>
+    </section>
 
-    <body>
+    <section id="page-header" class="blog-header">
+      <h2>#lets talk</h2>
+      <p>leave a message</p>
+    </section>
 
+    <section id="contact-details" class="section-p1">
+        <div class="details">
+            <span>GET IN TOUCH</span>
+            <h2>visit one of our agency</h2>
+            <h3>Head Office</h3>
+        <div>
+        <li>
+            <i class="fa-regular fa-map"></i>
+            <p style="color: rgb(125, 120, 120);" >56 glassford street glassgow</p>
+        </li>
+        
+        <li>
+      <i class="fa-solid fa-phone"></i>
+            <p style="color: rgb(125, 120, 120);">contact gmail@.com</p>
+        </li>
+        <li>
+            <i class="fa-regular fa-envelope"></i>
+            <p style="color:  rgb(125, 120, 120);"> contact gmail@.com</p>
+        </li>
+        <li>
+            <i class="fa-regular fa-clock"></i>
+            <p style="color: rgb(125, 120, 120);">time is</p>
+        </li>
+    </div>
+    </div>
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.315337132263!2d77.63941377580238!3d12.887433516716566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae14b023dade9d%3A0x35272e55303bd711!2sDayananda%20Sagar%20University%20(DSU)%20-%20City%20Campus!5e0!3m2!1sen!2sin!4v1695839230585!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-        <script src="script.js"></script>
+    </div>
+</section>
 
-    </body>
+<section id="form-details">
+    <form action="">
+        <span>LEAVE A MESSAGE</span>
+        <h2>we love to hear from you</h2>
+        <input type="text" placeholder="your name">
+        <input type="text" placeholder="E-mails">
+        <input type="text" placeholder="Subject">
+        <textarea name="" id="" cols="30" rows="10" placeholder="your message"></textarea>
+        <button class="normal">Submit</button>
+    </form>
+    <div class="people">
+        <div>
+            <img src="img/people/1.png" alt="">
+            <p style="color: rgb(125, 120, 120);"><span>richke</span>senior maneger <br> phone:454 512 448 00 00<br>
+                Email"contact@dmail.com</p>
 
+        </div>
+        <div>
+            <img src="img/people/2.png" alt="">
+            <p style="color: rgb(125, 120, 120);"><span>john sea</span>ceo<br> phone:454 512 448 00 00<br>
+                Email"contact@dmail.com</p>
+
+        </div>
+        <div>
+            <img src="img/people/3.png" alt="">
+            <p style="color: rgb(125, 120, 120);"><span>ghabal sea</span>chairman <br> phone:454 512 448 00 00<br>
+                Email"contact@dmail.com</p>
+
+        </div>
+    </div>
+</section>
+
+  <section id="newsletter" class="section-p1" class="section-m1">
+    <div class="newstext">
+      <h4>Sign Up for newsletters</h4>
+      <p>Get E-mail updates about our latest shop and  <span>speacial offers</span>.</p>
+    </div>
+    <div class="form">
+      <input type="text" placeholder="Your email address">
+      <button class="normal">sign up</button>
+    </div>
+  </section>
+  
+    <footer class="section-p1">
+      <div class="col">
+        <img class="logo" src="img/logo.png" alt="">
+        <h4>Contact</h4>
+        <p><strong>Address:</strong>church street,banngalore</p>
+        <p><strong>Phone:</strong>7022679341</p>
+        <p><strong>Hours:</strong>10:00 - 18:00,Mon - Sat</p>
+        <div class="follow">
+          <h4>Follow us</h4>
+          <div class="icon">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-pinterest-p"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <h4>About </h4>
+        <a href="#">About us</a>
+        <a href="#">Delivery Information</a>
+        <a href="#">Privecy Policy</a>
+        <a href="#">terms & conditions</a>
+        <a href="#">Contact us</a>
+      </div>
+      <div class="col">
+        <h4>MY Account </h4>
+        <a href="#">Sign In</a>
+        <a href="#">View cart</a>
+        <a href="#">My Whishlist</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+      </div>
+       <div class="col install">
+        <h4>Install App</h4>
+        <p>From App store or Google Play</p>
+        <div class="row">
+          <img src="img/pay/app.jpg" alt="">
+          <img src="img/pay/play.jpg" alt="">
+        </div>
+        <p>Secured Payment Gateways</p>
+        <img src="img/pay/pay.png" alt="">
+       </div>
+       <div class="copyright">
+        <p>&copy 2021,tech etc-html css template</p>
+       </div>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
