--- a/about.html
+++ b/about.html
@@ -1,19 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tech2etc Ecommerce</title>
+    <script
+      src="https://kit.fontawesome.com/adfc19058c.js"
+      crossorigin="anonymous"
+    ></script>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tech2etc Ecommerce Tutorial</title>
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-        <link rel="stylesheet" href="style.css">
-    </head>
+  <body>
 
-    <body>
+    <section id="header" class="about=heder">
+      <a href="#"><img src="img/logo.png" alt="" class="logo" /></a>
+      <div>
+        <ul id="navbar">
+          <li><a  href="index.html">Home</a></li>
+          <li><a  href="shop.html">Shop</a></li>
+          <li><a   href="blog.html">Blog</a></li>
+          <li><a class="active"  href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li>
+            <a id="lg-bag" href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+          </li>
+          <a href="#" id="close"><i class="fa-solid fa-circle-xmark"></i></a>
+        </ul>
+      </div>
+      <div id="mobile">
+        <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+        <i id="bar" class="fas fa-outdent"></i>
+      </div>
+    </section>
 
-        <script src="script.js"></script>
-    </body>
+    <section id="page-header" class="blog-header">
+      <h2>#know us</h2>
+      <p>nay quiries,please contaact us anytime/p>
+    </section>
 
+ <section id="about-head" class="section-p1">
+    <img src="img/about/a6.jpg" alt="">
+    <div>
+        <h2>who we are?</h2>
+        <p style="color: rgb(49, 44, 44);">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda iure quia pariatur non vitae tempora, soluta ad accusamus? Quos consectetur delectus qui incidunt sint consequatur reiciendis dicta aliquam expedita et.
+        Tenetur corporis, ea sint ad amet ullam laboriosam. Omnis assumenda eos molestiae at, repellat rerum modi! Quia impedit ea nemo ullam distinctio, voluptates assumenda quis! In eveniet nobis quia repellat!
+        Minima ! Dolor.</p>
+
+
+        <abbr title="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab alias consequatur repudiandae minima fugit vitae dignissimos tempore doloremque, unde quos deserunt, cupiditate soluta magnam illo! Cum eveniet rem blanditiis inventore.</abbr>
+        <br><br>
+
+        <marquee bgcolor="#ccc" loop="-1" scrollammount="5" width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, beatae. Fugit, illo facilis. Illo laborum quas eligendi aliquam sapiente tempore consequuntur vel corporis illum architecto, ipsam veritatis fugiat officia dolor!</marquee>
+    </div>
+
+ </section>
+
+   <section id="about-app" class="section-p1">
+    <h1>Downlaod Our <a href="#">App</a></h1>
+    <div class="video">
+        <video autoplay muted loop src="img/about/1.mp4"></video>
+    </div>
+   </section>
+
+   <section id="feature" class="section-p1 ">
+    <div class="fe-box">
+      <img src="img/features/f1.png" alt="">
+      <h6>Free shipping</h6>
+    </div>
+    <div class="fe-box">
+      <img src="img/features/f2.png" alt="">
+      <h6>Online shopping</h6>
+    </div>
+    <div class="fe-box">
+      <img src="img/features/f3.png" alt="">
+      <h6>Save money</h6>
+    </div>
+    <div class="fe-box">
+      <img src="img/features/f4.png" alt="">
+      <h6>Promotion</h6>
+    </div>
+    <div class="fe-box">
+      <img src="img/features/f5.png" alt="">
+      <h6>Happy sell</h6>
+    </div>
+    <div class="fe-box">
+      <img src="img/features/f6.png" alt="">
+      <h6>24/7 Support</h6>
+    </div>
+  </section>
+
+  <section id="newsletter" class="section-p1" class="section-m1">
+    <div class="newstext">
+      <h4>Sign Up for newsletters</h4>
+      <p>Get E-mail updates about our latest shop and  <span>speacial offers</span>.</p>
+    </div>
+    <div class="form">
+      <input type="text" placeholder="Your email address">
+      <button class="normal">sign up</button>
+    </div>
+  </section>
+  
+    <footer class="section-p1">
+      <div class="col">
+        <img class="logo" src="img/logo.png" alt="">
+        <h4>Contact</h4>
+        <p><strong>Address:</strong>church street,banngalore</p>
+        <p><strong>Phone:</strong>7022679341</p>
+        <p><strong>Hours:</strong>10:00 - 18:00,Mon - Sat</p>
+        <div class="follow">
+          <h4>Follow us</h4>
+          <div class="icon">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-pinterest-p"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <h4>About </h4>
+        <a href="#">About us</a>
+        <a href="#">Delivery Information</a>
+        <a href="#">Privecy Policy</a>
+        <a href="#">terms & conditions</a>
+        <a href="#">Contact us</a>
+      </div>
+      <div class="col">
+        <h4>MY Account </h4>
+        <a href="#">Sign In</a>
+        <a href="#">View cart</a>
+        <a href="#">My Whishlist</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+      </div>
+       <div class="col install">
+        <h4>Install App</h4>
+        <p>From App store or Google Play</p>
+        <div class="row">
+          <img src="img/pay/app.jpg" alt="">
+          <img src="img/pay/play.jpg" alt="">
+        </div>
+        <p>Secured Payment Gateways</p>
+        <img src="img/pay/pay.png" alt="">
+       </div>
+       <div class="copyright">
+        <p>&copy 2021,tech etc-html css template</p>
+       </div>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
